--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ar-js-org/ar.js": "^3.4.0-alpha-rc2",
+    "ar.js-modular": "^1.0.1",
     "core-js": "^3.8.3",
     "vue": "^3.2.13"
   },
