--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "deploy": "sh deploy.sh"
+    "deploy": "sh build.sh"
   },
   "dependencies": {
     "@ar-js-org/ar.js": "^3.4.0-alpha-rc2",
